--- a/templates/src/index.html
+++ b/templates/src/index.html
@@ -7,7 +7,16 @@
     <title>Responsive Icons</title>
   </head>
   <body>
+    <div class="main_container">
+      <ul class="iconul">
+        <li class="iconList">
+          <i class="fa fa-gitlab" aria-hidden="true"></i>
+        </li>
+        <li class="iconList"></li>
+        <li class="iconList"></li>
+      </ul>
 
+    </div>
 
     <script type="text/javascript" src="assets/js/grid.js"></script>
   </body>
