--- a/templates/src/index.html
+++ b/templates/src/index.html
@@ -10,10 +10,32 @@
     <div class="main_container">
       <ul class="iconul">
         <li class="iconList">
-          <i class="fa fa-gitlab" aria-hidden="true"></i>
+          <i class="fa fa-gitlab fa-5x" aria-hidden="true"></i>
         </li>
-        <li class="iconList"></li>
-        <li class="iconList"></li>
+        <li class="iconList">
+          <i class="fa fa-birthday-cake fa-5x" aria-hidden="true"></i>
+        </li>
+        <li class="iconList">
+          <i class="fa fa-bicycle fa-5x" aria-hidden="true"></i>
+        </li>
+        <li class="iconList">
+          <i class="fa fa-envira fa-5x" aria-hidden="true"></i>
+        </li>
+        <li class="iconList">
+          <i class="fa fa-diamond fa-5x" aria-hidden="true"></i>
+        </li>
+        <li class="iconList">
+          <i class="fa fa-hand-peace-o fa-5x" aria-hidden="true"></i>
+        </li>
+        <li class="iconList">
+          <i class="fa fa-headphones fa-5x" aria-hidden="true"></i>
+        </li>
+        <li class="iconList">
+          <i class="fa fa-fort-awesome fa-5x" aria-hidden="true"></i>
+        </li>
+        <li class="iconList">
+          <i class="fa fa-road fa-5x" aria-hidden="true"></i>
+        </li>
       </ul>
 
     </div>
