add jquery hover background color change

--- a/templates/src/assets/sass/styles.scss
+++ b/templates/src/assets/sass/styles.scss
@@ -22,6 +22,7 @@ body{
   margin: 1em 0;
   padding: 5em 0;
   box-sizing: border-box;
+  border-bottom: .1em solid black;
   background: white;
   text-align: center;
   list-style: none;
