--- a/templates/src/index.html
+++ b/templates/src/index.html
@@ -11,30 +11,39 @@
       <ul class="iconul">
         <li class="iconList">
           <i class="fa fa-gitlab fa-5x" aria-hidden="true"></i>
+          <h2 class="h3title"></h2>
         </li>
         <li class="iconList">
-          <i class="fa fa-birthday-cake fa-5x" aria-hidden="true"></i>
+          <i class="fa fa-plane fa-5x" aria-hidden="true"></i>
+          <h2 class="h3title"></h2>
         </li>
         <li class="iconList">
           <i class="fa fa-bicycle fa-5x" aria-hidden="true"></i>
+          <h2 class="h3title"></h2>
         </li>
         <li class="iconList">
           <i class="fa fa-envira fa-5x" aria-hidden="true"></i>
+          <h2 class="h3title"></h2>
         </li>
         <li class="iconList">
           <i class="fa fa-diamond fa-5x" aria-hidden="true"></i>
+          <h2 class="h3title"></h2>
         </li>
         <li class="iconList">
-          <i class="fa fa-hand-peace-o fa-5x" aria-hidden="true"></i>
+          <i class="fa fa-google fa-5x" aria-hidden="true"></i>
+          <h2 class="h3title"></h2>
         </li>
         <li class="iconList">
           <i class="fa fa-headphones fa-5x" aria-hidden="true"></i>
+          <h2 class="h3title"></h2>
         </li>
         <li class="iconList">
-          <i class="fa fa-fort-awesome fa-5x" aria-hidden="true"></i>
+          <i class="fa fa-calendar fa-5x" aria-hidden="true"></i>
+          <h2 class="h3title"></h2>
         </li>
         <li class="iconList">
           <i class="fa fa-road fa-5x" aria-hidden="true"></i>
+          <h2 class="h3title"></h2>
         </li>
       </ul>
 
