--- a/templates/src/index.html
+++ b/templates/src/index.html
@@ -9,41 +9,50 @@
   <body>
     <div class="main_container">
       <ul class="iconul">
-        <li class="iconList">
+        <li class="iconList liHover">
           <i class="fa fa-gitlab fa-5x" aria-hidden="true"></i>
-          <h2 class="h3title"></h2>
+          <h2 class="h2title">gitlab</h2>
+          <h4 class="h4title">animal</h4>
         </li>
-        <li class="iconList">
+        <li class="iconList liHover">
           <i class="fa fa-plane fa-5x" aria-hidden="true"></i>
-          <h2 class="h3title"></h2>
+          <h2 class="h2title">plane</h2>
+          <h4 class="h4title">travel</h4>
         </li>
         <li class="iconList">
           <i class="fa fa-bicycle fa-5x" aria-hidden="true"></i>
-          <h2 class="h3title"></h2>
+          <h2 class="h2title">bicycle</h2>
+          <h4 class="h4title">execise</h4>
         </li>
         <li class="iconList">
           <i class="fa fa-envira fa-5x" aria-hidden="true"></i>
-          <h2 class="h3title"></h2>
+          <h2 class="h2title">leaf</h2>
+          <h4 class="h4title">nature</h4>
         </li>
         <li class="iconList">
           <i class="fa fa-diamond fa-5x" aria-hidden="true"></i>
-          <h2 class="h3title"></h2>
+          <h2 class="h2title">diamond</h2>
+          <h4 class="h4title">gem</h4>
         </li>
         <li class="iconList">
           <i class="fa fa-google fa-5x" aria-hidden="true"></i>
-          <h2 class="h3title"></h2>
+          <h2 class="h2title">google</h2>
+          <h4 class="h4title">tech</h4>
         </li>
         <li class="iconList">
           <i class="fa fa-headphones fa-5x" aria-hidden="true"></i>
-          <h2 class="h3title"></h2>
+          <h2 class="h2title">earbuds</h2>
+          <h4 class="h4title">music</h4>
         </li>
         <li class="iconList">
           <i class="fa fa-calendar fa-5x" aria-hidden="true"></i>
-          <h2 class="h3title"></h2>
+          <h2 class="h2title">calendar</h2>
+          <h4 class="h4title">date</h4>
         </li>
         <li class="iconList">
           <i class="fa fa-road fa-5x" aria-hidden="true"></i>
-          <h2 class="h3title"></h2>
+          <h2 class="h2title">road</h2>
+          <h4 class="h4title">journey</h4>
         </li>
       </ul>
 
