--- a/templates/src/assets/sass/styles.scss
+++ b/templates/src/assets/sass/styles.scss
@@ -10,7 +10,6 @@ $susy: (
   );
 
 body{
-  color: lightblue;
   background-color: lightblue;
   font-family: sans-serif;
 }
@@ -20,6 +19,7 @@ body{
 }
 
 .iconList{
+  color: lightblue;
   box-shadow: 1px 2px 5px 0px black;
   position: relative;
   margin: 1em 0;
@@ -46,6 +46,7 @@ body{
 }
 
 .h4title{
+  color: white;
   bottom: 1em;
   right: 50%;
   font-size: 1em;
