--- a/templates/src/index.html
+++ b/templates/src/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css">
     <script src="../../bower_components/jquery/dist/jquery.min.js"></script>
     <link rel="stylesheet" href="assets/sass/styles.css">
     <title>Responsive Icons</title>
